--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "sucrase": "^3.35.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
